JEL-1573 : Code fix for button text alignment

--- a/stylesheets/pages/subscription.less
+++ b/stylesheets/pages/subscription.less
@@ -2582,10 +2582,12 @@
 	                            .button{
 	                                font-size: 18px;
 	                                &.button-yes{
-	                                    width:20%;
+										width:20%;
+										padding:7px 0px;
 	                                }
 	                                &.button-no{
-	                                     width:20%;
+										 width:20%;
+										 padding:7px 0px;
 	                                }
 	                                &.button-yes-subscribe{
 										 width:48%;
